# qed

./: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  astro.config.mjs  base.css  bun.lockb  flake.nix  fly.toml  global.css  justfile  notas.djot  package-lock.json  package.json  pnpm-lock.yaml  schema.sql  tailwind.config.js  tailwind.config.mjs
.astro/: settings.json
.astro/astro/: content.d.ts
assets/: tw.css
content/: 2023-07-07 1 Geometria Analítica.djot  2023-08-18 2 Geometria Analítica.djot
crates/qed-core/: Cargo.toml
crates/qed-core/src/: lib.rs
crates/qed-web/: Cargo.toml
crates/qed-web/src/: extract.rs  extractors.rs  infra.rs  main.rs
crates/qed-web/src/infra/: libsql.rs  mem.rs  mod.rs
public/fonts/Computer-Modern/: cmun-serif.css
src/components/: MdxPage.tsx  Prose.astro  count.tsx  metadata.tsx  siphash13.js  tags.tsx  theme.tsx  util.tsx
src/content/: config.ts
src/content/document/UFPE/Cálculo 1/: 1º Exercício Escolar de Cálculo 1 (2019-03-27).mdx  1º Exercício Escolar de Cálculo 1 (2023-12-14).mdx  2º Exercício Escolar de Cálculo 1 (2019-05-16).mdx
src/content/document/UFPE/Geometria Analítica/: 1º Exercício de verificação (2023-07-07).mdx  1º Exercício de verificação (2024-08-23).mdx  2º Exercício de verificação (2023-08-18).mdx
src/layout/: Base.astro
src/pages/: index.astro
src/pages/d/: [id].astro
templates/: base.html  document.html  document_list.html  documents.html  error.html  not_found.html  questions.html
