[workspace]
members = [
	"crates/qed-core",
	"crates/qed-web",
]
resolver = "2"

[workspace.dependencies]
qed-core = { path = "crates/qed-core" }

async-trait = "0.1.80"

dotenv = "0.15.0"

libsql = { git = "https://github.com/levydsa/libsql", package = "libsql", branch = "nix-patch" }

futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }

axum = { version = "0.7.4", features = ["original-uri"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["cookie"] }

tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "compression-br", "catch-panic", "timeout"] }
tower-livereload = "0.9.2"

oauth2 = "4.4.2"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}

serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"

anyhow = { version = "1.0.80", features = ["backtrace"] }
thiserror = "1.0.60"

fallible-iterator = "0.3.0"

jotdown = "0.3.2"
maud = { version = "0.26.0", features = ["axum"] }

time = { version = "0.3.34", features = ["serde"]}
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v7", "v5"] }

